# evo-data-converters

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  release.yml
.github/actions/testing/: action.yaml
.github/workflows/: on-release.yaml  publish-duf.yaml  publish-image.yaml  publish-obj.yaml  publish-shape.yaml  publish-xyz.yaml  run-all-tests.yaml  update-changelog.yml
code-samples/duf-automated-conversion/: README.md  convert_duf.bat  publish_to_evo.py
code-samples/duf-automated-conversion/docs/: SETUP.md
code-samples/duf-jupyter-conversion/: README.md  convert_duf.ipynb  pyproject.toml  requirements.txt  start-here.bat
code-samples/duf-jupyter-conversion/helpers/: conversion.py  portal.py  widgets.py
samples/convert-duf/: convert-duf.ipynb
samples/data-converters/python/convert-resqml/: convert-points-properties.ipynb
samples/duf-automated-conversion/: pyproject.toml
samples/duf-conversion-automation/: README.md  convert_duf.bat  publish_to_evo.py  pyproject.toml  requirements.txt
samples/duf-jupyter-conversion/: convert_duf.ipynb  launch-jupyterlab.bat  pyproject.toml  requirements.txt  start-here.bat
samples/duf-jupyter-conversion/helpers/: conversion.py  widgets.py
scripts/: check_uv_lock_sources.py
src/: DufAttributes.cs  DufDocument.cs  Program.cs  SimpleDuf.cs
src/evo/data_converters/: README.md
src/evo/data_converters/duf/: __init__.py  duf_reader_context.py
src/evo/data_converters/duf/common/: __init__.py  duf_wrapper.py  utils.py
src/evo/data_converters/duf/importer/: duf_attributes_to_evo.py  duf_lineset_to_evo.py  duf_surface_to_evo.py  (+1 more)
src/evo/data_converters/omf/: README.md
tests/: test_uv_lock_sources.py
(+3 files in other folders)
