[project]
name = "duf-automated-conversion"
version = "0.0.1"
description = "Automated DUF file conversion to an Evo workspace"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy<=1.26.4",
    "evo-data-converters-common>=0.2.4",
    "evo-data-converters-duf>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.6"
]
