[project]
name = "convert-duf"
version = "0.0.1"
description = "DUF file converter for Evo workspace"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy<=1.26.4",
    "evo-data-converters-common>=0.2.4",
    "evo-data-converters-duf>=0.1.8",
    "ruff>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
]
